slight formatting updates (no content yet)

--- a/Notes/Research-General-Notes.tex
+++ b/Notes/Research-General-Notes.tex
@@ -32,8 +32,15 @@
 
 \begin{multicols*}{2}
  
-  \section{F}
+\section{Linear Algebra}
+\begin{itemize}[label = $\triangleright$, itemsep = -3pt, topsep = -10pt, leftmargin = *]
+  \item 
+  \item 
+\end{itemize}
 
+\section{Gaussian Processes}
+
+\section{Bayesian Optimization}
 
 \end{multicols*}
 \end{document}
