Running through gradient descent example

--- a/Code/Gradient-Descent-Demo/grad_descent_example.ipynb
+++ b/Code/Gradient-Descent-Demo/grad_descent_example.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import tqdm.notebook as tqdm"
+    "import tqdm.notebook as tqdm\n",
+    "# !pip install tqdm"
    ]
   },
   {
@@ -22,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([-0.9771,  1.4426], requires_grad=True)\n",
+      "tensor([0.3424, 0.2702], requires_grad=True)\n",
       "Parameter containing:\n",
-      "tensor([ 0.7405, -1.5294, -0.4147, -0.7225,  2.3669], requires_grad=True)\n"
+      "tensor([-1.4137, -0.7965,  0.6452, -0.5983, -0.9343], requires_grad=True)\n"
      ]
     }
    ],
@@ -82,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(18.1362, grad_fn=<PowBackward0>)\n"
+      "tensor(30.7396, grad_fn=<PowBackward0>)\n"
      ]
     }
    ],
@@ -100,12 +101,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7bd55ad75e24c8eb69f7d70a70826eb",
+       "model_id": "7eae547928ce4844a78d0dbe5e2d424d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/400 [00:00<?, ?it/s]"
+       "  0%|          | 0/500 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -122,7 +123,7 @@
     "#############\n",
     "# The gradient descent loop\n",
     "#############\n",
-    "num_iter = 400  # You may need more iterations than this\n",
+    "num_iter = 500  # You may need more iterations than this\n",
     "iterator = tqdm.tqdm(range(num_iter))\n",
     "\n",
     "for _ in iterator:\n",
@@ -151,8 +152,8 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([-0.4659,  0.9794], requires_grad=True) Parameter containing:\n",
-      "tensor([ 0.2173, -0.9189,  1.4809,  0.5069,  1.9396], requires_grad=True)\n"
+      "tensor([-0.8018, -0.9649], requires_grad=True) Parameter containing:\n",
+      "tensor([-1.7967, -1.8780, -2.3270,  0.2421, -1.3578], requires_grad=True)\n"
      ]
     }
    ],
@@ -170,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.9370, grad_fn=<PowBackward0>)\n"
+      "tensor(4.0399, grad_fn=<PowBackward0>)\n"
      ]
     }
    ],
@@ -206,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
