--- a/Code/Iterative-GPs/iterative_gp_selection_conditioning.ipynb
+++ b/Code/Iterative-GPs/iterative_gp_selection_conditioning.ipynb
@@ -2,17 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "id": "e2571991-31ac-4eaf-b61e-375e95d46067",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x25044758790>"
+       "<torch._C.Generator at 0x2b5246d87b0>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "e0500b93-ff5d-43f5-93a6-97bcf141e313",
    "metadata": {},
    "outputs": [],
@@ -72,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "7a520ae8-6156-4a72-b454-cf56c3704f23",
    "metadata": {},
    "outputs": [],
@@ -116,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "72c0e875-f569-43ea-9267-532db779964d",
    "metadata": {},
    "outputs": [],
@@ -183,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "90b39917-6e6e-4c34-8d34-9e5f4814bd0c",
    "metadata": {},
    "outputs": [],
@@ -248,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "1d9df125-ce8b-4fb2-90d3-60c39f7dd2a1",
    "metadata": {},
    "outputs": [],
@@ -265,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "23767a8a-3ead-432e-9a38-1858b8722750",
    "metadata": {},
    "outputs": [],
@@ -308,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "89852255-a38e-48ed-962b-15ac98a4e531",
    "metadata": {},
    "outputs": [],
@@ -332,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "5c2b318b-a0b7-4762-8c9a-2e4ca2fed461",
    "metadata": {},
    "outputs": [
@@ -493,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "1c761619-2b0d-4e55-b11d-7b1f8bef0138",
    "metadata": {},
    "outputs": [
@@ -515,21 +521,23 @@
       "        [-0.7065,  0.0793,  0.6076,  0.2241,  0.2740,  0.0000],\n",
       "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000],\n",
       "        [-0.1487, -0.6780,  0.2788, -0.1338,  0.3164, -0.5679],\n",
-      "        [ 0.0386, -0.0342, -0.5286, -0.6108, -0.5532, -0.1970]])\n"
+      "        [ 0.0386, -0.0342, -0.5286, -0.6108, -0.5532, -0.1970]])\n",
+      "tensor([1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000,\n",
+      "        1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000])\n"
      ]
     }
    ],
    "source": [
     "# Matrix is transposed and rows are subsetted for sake of readability\n",
-    "print(S_full[all_indices,:].mT) \n",
+    "# print(S_full[all_indices,:].mT) \n",
     "\n",
     "# Double-check that the columns of S_full (rows in the transposed matrix printed above) have unit norm\n",
-    "print((S_full.mT @ S_full).diag())"
+    "# print((S_full.mT @ S_full).diag())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "id": "9a7dda24-10f8-42a8-8ef7-0f0d6aecdb91",
    "metadata": {},
    "outputs": [],
