Adding some more code

--- a/Code/One-Shot-GP/grad_descent_gp_selection.ipynb
+++ b/Code/One-Shot-GP/grad_descent_gp_selection.ipynb
@@ -13,26 +13,27 @@
    "source": [
     "# Gradient Descent GP Selection\n",
     "\n",
-    "A Python notebook regarding Gaussian Processes based primarily on two pre-prints: *Computation-Aware Gaussian Processes* and *Approximation-Aware Bayesian Optimization*"
+    "A Python notebook regarding Gaussian Processes based primarily on the pre-prints of two papers: *Computation-Aware Gaussian Processes* and *Approximation-Aware Bayesian Optimization*.\n",
+    "\n",
+    "## Goal\n",
+    "\n",
+    "The main goal is to perform Bayesian Optimization via Gaussian Process (GP) regression, with tweaks to the existing algorithms to reduce computational space and time complexity via approximation.\n",
+    "\n",
+    "## Problem Setup\n",
+    "\n",
+    "Initially, we have some existing dataset $\\mathcal{D}_{0} = \\{(x_{i}, y_{i})\\}_{i=1}^{n}$, with $x_{i} \\in \\mathbb{R}^{d}, y_{i} \\in \\mathbb{R}$. Equivalently, we let $\\mathcal{D}_{0} = (\\mathbf{X}, \\mathbf{y})$, with $\\mathbf{X} \\in \\mathbb{R}^{n \\times d}, \\mathbf{y} \\in \\mathbb{R}^{n}$. \n",
+    "\n",
+    "We want to use Gaussian Process regression to perform Bayesian optimization to find $x^{*} = \\arg\\max_{x \\in \\mathcal{X}}f(x)$, for the unknown objective function $f(\\cdot): \\mathcal{X} \\to \\mathbb{R}$, for some compact domain $\\mathcal{X} \\subset \\mathbb{R}^{d}$.\n",
+    "\n",
+    "Unfortunately, the standard `BayesOpt` formulation has $\\mathcal{O}(n^3)$ time complexity, as the \"proper\" mathematical formulation requires a matrix inversion. To reduce the computational complexity, we include an \"action matrix\" $\\mathbf{S} \\in \\mathbb{R}^{n \\times k}$ for $k \\ll n$ and performing Bayesian optimization on the \"simplified\" dataset $\\mathcal{D}'_{0} = (\\mathbf{S}^{\\top}\\mathbf{X}, \\mathbf{S}^{\\top}\\mathbf{y})$, which yields $\\mathcal{O}(kn^2)$ time complexity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b841ece8-88a7-4066-9ab6-6f2b657ee492",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x2353f7e3030>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import matplotlib.pyplot as plt\n",
@@ -60,30 +61,12 @@
     "DEVICE = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "\n",
     "# Set a seed (for reproducibility)\n",
-    "torch.manual_seed(2024)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ced9ad90-4239-4343-b402-3c38626de059",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "Initially, we have some existing dataset $\\mathcal{D}_{0} = \\{(x_{i}, y_{i})\\}_{i=1}^{n}$, with $x_{i} \\in \\mathbb{R}^{d}, y_{i} \\in \\mathbb{R}$. Equivalently, we let $\\mathcal{D}_{0} = (\\mathbf{X}, \\mathbf{y})$, with $\\mathbf{X} \\in \\mathbb{R}^{n \\times d}, \\mathbf{y} \\in \\mathbb{R}^{n}$. \n",
-    "\n",
-    "We want to use Gaussian Process regression to perform Bayesian optimization to find $x^{*} = \\arg\\max_{\\mathbb{R}^{d}}f(\\cdot)$, for the unknown objective function $f(\\cdot): \\mathbb{R}^{d} \\to \\mathbb{R}$.\n",
-    "\n",
-    "Unfortunately, the standard `BayesOpt` formulation has $\\mathcal{O}(n^3)$ time complexity, as the \"proper\" mathematical formulation requires a matrix inversion. To reduce the computational complexity, we include an \"action matrix\" $\\mathbf{S} \\in \\mathbb{R}^{n \\times k}$ for $k \\ll n$, which yields $\\mathcal{O}(n^2{k})$ time complexity."
+    "# torch.manual_seed(2024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e66d475b-d952-411e-a3bc-7dfc6f56ed5d",
    "metadata": {
     "editable": true,
@@ -113,24 +96,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 31,
+   "id": "8efb0d51-576b-425d-8ab0-58d83945425b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matern_kernel(X1: Float[Tensor, \"M D\"], X2: Float[Tensor, \"N D\"],\n",
+    "                  ls: Float[Tensor, \"1 D\"], os: Float[Tensor, \"1 1\"], ) -> Float[Tensor, \"M N\"]:\n",
+    "    r\"\"\"\n",
+    "    Computes Matern 5/2 kernel across all pairs of points (rows) in X1 & X2\n",
+    "\n",
+    "    k(X1, X2) = os * (1 + \\sqrt{5} * D + 5/3 * (D**2)) * exp(-\\sqrt{5} * D)\n",
+    "    D = || (X1 - X2) / ls ||_2\n",
+    "    https://en.wikipedia.org/wiki/Mat%C3%A9rn_covariance_function\n",
+    "\n",
+    "    ls: lengthscale\n",
+    "    os: outputscale\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Compute D, D ** 2, \\sqrt{5} * D\n",
+    "    D_sq = (X1.div(ls).unsqueeze(-2) - X2.div(ls).unsqueeze(-3)).square().sum(dim = -1)\n",
+    "    # ^^^ This function is using broadcasting (via the unsqueeze operation)\n",
+    "    #     to compute all of the pairwise distances in parallel\n",
+    "    #\n",
+    "    #     You should also get into the habit of using \"negative indexes\"\n",
+    "    #     (i.e. unsqueeze(-2) rather than unsqueeze(0))\n",
+    "    #     as negative indices allow you to easily write parallel code for batched operations.\n",
+    "    #     (Again, not important now, but a good habit to develop!)\n",
+    "    \n",
+    "    D = torch.sqrt(D_sq + 1e-20)  # The 1e-20 is for numerical stability, so we don't get any NaNs if D≈0 but is very small and negative\n",
+    "    \n",
+    "    # Compute and return kernel\n",
+    "    return torch.mul(\n",
+    "        1 + (math.sqrt(5) * D) + ((5. / 3) * D_sq),\n",
+    "        torch.exp(-math.sqrt(5) * D)\n",
+    "    ).mul(os)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ced9ad90-4239-4343-b402-3c38626de059",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "## Test Functions\n",
+    "\n",
+    "We will use a few test functions to compare the performance of various Bayesian Optimization algorithms.\n",
+    "\n",
+    "These include:\n",
+    "- A simple periodic function $f(x) = \\sin(2\\pi{x}) + \\sin(4\\pi{x})$ defined on $[-1, 1] \\subset \\mathbb{R}$.\n",
+    "- The [\"Hartmann 6\" function](https://www.sfu.ca/~ssurjano/hart6.html) defined on $[0, 1]^{6}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bfd130b-ada6-4244-86ee-29794b4e5aa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simple_periodic(X: Float[Tensor, \"N 1\"]) -> Float[Tensor, \"N\"]:\n",
+    "    r\"\"\"\n",
+    "    Computes values of f(x) = sin(2pi*x) + sin(4pi*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "242a8796-3a1f-4828-a69c-03eb7042862d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([2])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def hartmann_six(X: Float[Tensor, \"N 6\"]) -> Float[Tensor, \"N\"]:\n",
     "    r\"\"\"\n",
     "    Computes the value of the Hartmann six-dimensional test function on N rows of input data\n",
     "    More info on this test function at: https://www.sfu.ca/~ssurjano/hart6.html\n",
     "    \"\"\"\n",
+    "\n",
+    "    ### TODO: Check if inputs are \"valid\" (possibly)\n",
+    "    \n",
     "    alpha = torch.tensor([1.0, 1.2, 3.0, 3.2], dtype = DTYPE, device = X.device)\n",
     "    A = torch.tensor([[10, 3, 17, 3.5, 1.7, 8],\n",
     "                      [0.05, 10, 17, 0.1, 8, 14],\n",
@@ -149,62 +198,48 @@
     "    # Exponentiate and compute \"outer sums\"\n",
     "    outer_sums: Float[Tensor, \"N\"] = -alpha @ torch.exp(-inner_sums).mT\n",
     "    \n",
-    "    return(outer_sums)\n",
-    "\n",
-    "# Just checking the function works as desired\n",
-    "test_vecs = torch.tensor([[0., 0., 0., 0., 0., 0.],\n",
-    "                          [0.20169, 0.150011, 0.476874, 0.275332, 0.311652, 0.657300]])\n",
-    "print(hartmann_six(test_vecs).size())"
+    "    return outer_sums"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 27,
    "id": "036d9446-64ea-439e-bdfd-0db356910339",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-0.0051, -3.3224])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Just checking the function works as desired\n",
+    "# test_vecs = torch.tensor([[0., 0., 0., 0., 0., 0.],\n",
+    "#                           [0.20169, 0.150011, 0.476874, 0.275332, 0.311652, 0.657300]])\n",
+    "# print(hartmann_six(test_vecs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "fc899a50-b8e3-474c-bb86-9d8549035d2a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([2, 6])"
+       "tensor([[5.5518e-09, 1.2797e-10, 5.5518e-09, 1.2797e-10],\n",
+       "        [1.2489e-08, 3.0514e-10, 1.1287e-08, 2.5036e-10]])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# r\"\"\"\n",
-    "# alpha <- c(1.0, 1.2, 3.0, 3.2)\n",
-    "#   A <- c(10, 3, 17, 3.5, 1.7, 8,\n",
-    "#          0.05, 10, 17, 0.1, 8, 14,\n",
-    "#          3, 3.5, 1.7, 10, 17, 8,\n",
-    "#          17, 8, 0.05, 10, 0.1, 14)\n",
-    "#   A <- matrix(A, 4, 6, byrow=TRUE)\n",
-    "#   P <- 10^(-4) * c(1312, 1696, 5569, 124, 8283, 5886,\n",
-    "#                    2329, 4135, 8307, 3736, 1004, 9991,\n",
-    "#                    2348, 1451, 3522, 2883, 3047, 6650,\n",
-    "#                    4047, 8828, 8732, 5743, 1091, 381)\n",
-    "#   P <- matrix(P, 4, 6, byrow=TRUE)\n",
-    "# \"\"\"\n",
-    "# P: Float[Tensor, \"4 6\"] = 1e-4 * torch.tensor([[1312, 1696, 5569, 124, 8283, 5886],\n",
-    "#                                                    [2329, 4135, 8307, 3736, 1004, 9991],\n",
-    "#                                                    [2348, 1451, 3522, 2883, 3047, 6650],\n",
-    "#                                                    [4047, 8828, 8732, 5743, 1091, 381]])\n",
-    "\n",
-    "# test1 = 1e-2 * torch.tensor([[1, 2, 3, 4, 5, 6], [1, 2, 4, 8, 16, 32], [20.169, 15.0011, 47.6874, 27.5332, 31.1652, 65.7300]])\n",
-    "# test2 = (torch.unsqueeze(test1, -2)).pow(2)\n",
-    "# test2.sum(-1)\n",
-    "# hartmann_six(test1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc899a50-b8e3-474c-bb86-9d8549035d2a",
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
