--- a/Code/One-Shot-GP/grad_descent_gp_selection.ipynb
+++ b/Code/One-Shot-GP/grad_descent_gp_selection.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "id": "b841ece8-88a7-4066-9ab6-6f2b657ee492",
    "metadata": {},
    "outputs": [],
@@ -54,6 +54,8 @@
     "\n",
     "from torch import Tensor\n",
     "\n",
+    "from collections.abc import Callable\n",
+    "\n",
     "%matplotlib inline\n",
     "\n",
     "# Set DTYPE and DEVICE variables for torch tensors\n",
@@ -62,6 +64,16 @@
     "\n",
     "# Set a seed (for reproducibility)\n",
     "# torch.manual_seed(2024)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "387c8387-479e-453d-b6b9-e020f88fdb2e",
+   "metadata": {},
+   "source": [
+    "## GP Regression Setup\n",
+    "\n",
+    "For convenience, we will use a prior mean function $\\mu = 0$ and the [Matérn covariance function](https://en.wikipedia.org/wiki/Mat%C3%A9rn_covariance_function) with $\\nu = 5/2$ as the priors for our Bayesian optimization."
    ]
   },
   {
@@ -96,13 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "id": "8efb0d51-576b-425d-8ab0-58d83945425b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def matern_kernel(X1: Float[Tensor, \"M D\"], X2: Float[Tensor, \"N D\"],\n",
-    "                  ls: Float[Tensor, \"1 D\"], os: Float[Tensor, \"1 1\"], ) -> Float[Tensor, \"M N\"]:\n",
+    "def matern_kernel(\n",
+    "    X1: Float[Tensor, \"M D\"], \n",
+    "    X2: Float[Tensor, \"N D\"],\n",
+    "    ls: Float[Tensor, \"1 D\"], \n",
+    "    os: Float[Tensor, \"1 1\"],\n",
+    ") -> Float[Tensor, \"M N\"]:\n",
     "    r\"\"\"\n",
     "    Computes Matern 5/2 kernel across all pairs of points (rows) in X1 & X2\n",
     "\n",
@@ -134,6 +150,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1eedbbb-b367-43f3-b856-5f6d5d30a11a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_chol_newdata(\n",
+    "    K_chol: Float[Tensor, \"N N\"], X_old: Float[Tensor, \"N D\"], X_new: Float[Tensor, \"N_new D\"], \n",
+    "    ls: Float[Tensor, \"1 D\"], os: Float[Tensor, \"1 1\"]\n",
+    "    X: Float[Tensor, \"N D\"],\n",
+    "    X_next: Float[Tensor, \"N_next D\"],\n",
+    "    ls: Float[Tensor, \"1 D\"],\n",
+    "    os: Float[Tensor, \"1 1\"],\n",
+    "    sigma_sq: Float[Tensor, \"\"],\n",
+    "    eps: float = 1e-4,\n",
+    ") -> Float[Tensor, \"(N+N_next) (N+N_Next)\"]:\n",
+    "    \"\"\"\n",
+    "    Computes the Cholesky factor of the block matrix\n",
+    "    [ k(X, X) + sigma_sq * I          k(X, X_next)                      ]\n",
+    "    [ k(X_next, X)                    k(X_next, X_next)  + sigma_sq * I ]\n",
+    "\n",
+    "    This function should efficiently use prior computation.\n",
+    "    Given that we already have computed K_chol @ K_chol.T = k(X, X),\n",
+    "    we should be able to \"update\" that K_chol in O(N^2) time to get the\n",
+    "    desired block cholesky factorization.\n",
+    "\n",
+    "    eps:      Small amount of noise to add to the diagonal for stability\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # TODO: this function is currently not efficient :)\n",
+    "    # Right now, we're just computing the block Cholesky factorization from scratch,\n",
+    "    #     rather than reusing K_chol for an efficient update\n",
+    "    # You should make this function more efficient.\n",
+    "\n",
+    "    X_joint = torch.cat([X, X_next], dim=-2)\n",
+    "    K_joint = k(X_joint, X_joint, ls, os)\n",
+    "\n",
+    "    # Add sigma_sq * I to K_joint\n",
+    "    #\n",
+    "    # *Important*: the Cholesky factorization can be a bit numerically unstable\n",
+    "    # If the smallest eigenvalues of K are ≈0, they can numerically appear to be slightly negative\n",
+    "    #     which causes the Cholesky factorization to fail\n",
+    "    # We can circumvent this problem by adding a small amount of diagonal noise to K_joint\n",
+    "    #     to bump up all of the eigenvalues\n",
+    "    I = torch.eye(K_joint.size(-1), dtype=K_joint.dtype, device=K_joint.device)\n",
+    "    K_joint = K_joint + (sigma_sq + eps) * I\n",
+    "\n",
+    "    # Now we're ready to compute the Cholesky factor\n",
+    "    # return torch.linalg.cholesky(K_joint, upper=False)\n",
+    "\n",
+    "    # Get the sub-blocks of K_joint\n",
+    "    N = X.size()[0]\n",
+    "    N_next = X_next.size()[0]\n",
+    "    K_11, K_12, K_22 = K_joint[0:N, 0:N], K_joint[0:N, N:], K_joint[N:, N:]\n",
+    "\n",
+    "    # Cholesky factorization on the sub-blocks\n",
+    "    L_21 = torch.linalg.solve_triangular(K_chol, K_12, upper = False).mT\n",
+    "    L_22 = torch.linalg.cholesky(K_22 - L_21 @ L_21.mT, upper = False)\n",
+    "\n",
+    "    # Concatenate sub-blocks of Cholesky decomposition matrix and return them in the form\n",
+    "    # [ K_chol      0 ]\n",
+    "    # [ L_21     L_22 ]\n",
+    "    return(torch.cat((torch.cat((K_chol, torch.zeros(N, N_next)), -1), torch.cat((L_21, L_22), -1)), -2))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ced9ad90-4239-4343-b402-3c38626de059",
    "metadata": {
@@ -155,19 +237,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "0bfd130b-ada6-4244-86ee-29794b4e5aa6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def simple_periodic(X: Float[Tensor, \"N 1\"]) -> Float[Tensor, \"N\"]:\n",
     "    r\"\"\"\n",
-    "    Computes values of f(x) = sin(2pi*x) + sin(4pi*x)"
+    "    Computes values of f(x) = sin(2pi*x) + sin(4pi*x)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    ### TODO: Check if inputs are \"valid\" (possibly)\n",
+    "\n",
+    "    return X[:, 0].mul(2 * math.pi).sin() + X[:, 0].mul(4 * math.pi).sin()  \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "242a8796-3a1f-4828-a69c-03eb7042862d",
    "metadata": {},
    "outputs": [],
@@ -203,7 +291,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
+   "id": "0b7014df-e9fe-446c-b2a3-894a1beecd5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def observe(\n",
+    "    func: Callable[[Float[Tensor, \"N D\"]], Float[Tensor, \"N\"]],\n",
+    "    X: Float[Tensor, \"N D\"], \n",
+    "    noise: Float = 1e-2,\n",
+    ") -> Float[Tensor, \"N\"]:\n",
+    "    r\"\"\"\n",
+    "    A \"wrapper\" to return func(X) + epsilon.\n",
+    "    `func` is a real-valued function on R^D which can be applied rowwise to X \n",
+    "    `noise` is the standard deviation of epsilon (iid observation noise)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    true_obs = func(X)\n",
+    "    return true_obs + torch.randn_like(true_obs).mul(noise)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "036d9446-64ea-439e-bdfd-0db356910339",
    "metadata": {},
    "outputs": [
@@ -211,35 +321,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.0051, -3.3224])\n"
+      "tensor([-0.0345, -0.2305, -0.0463, -0.0425, -0.4781, -0.0033, -0.3939, -0.5895,\n",
+      "        -0.0059])\n",
+      "tensor([-0.0345, -0.2305, -0.0464, -0.0425, -0.4781, -0.0033, -0.3939, -0.5894,\n",
+      "        -0.0059])\n"
      ]
     }
    ],
    "source": [
-    "# Just checking the function works as desired\n",
-    "# test_vecs = torch.tensor([[0., 0., 0., 0., 0., 0.],\n",
-    "#                           [0.20169, 0.150011, 0.476874, 0.275332, 0.311652, 0.657300]])\n",
-    "# print(hartmann_six(test_vecs))"
+    "# Ensuring the observe function works as intended\n",
+    "test_vecs = torch.rand(54).reshape((9,6))\n",
+    "print(hartmann_six(test_vecs))\n",
+    "print(observe(hartmann_six, test_vecs, noise = 1e-5)) # Outputs above plus 1e-5 noise. Should be very similar."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "fc899a50-b8e3-474c-bb86-9d8549035d2a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[5.5518e-09, 1.2797e-10, 5.5518e-09, 1.2797e-10],\n",
-       "        [1.2489e-08, 3.0514e-10, 1.1287e-08, 2.5036e-10]])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
