--- a/Notes/macros/math-alphabets.tex
+++ b/Notes/macros/math-alphabets.tex
@@ -27,6 +27,9 @@
 \def\bfX{\mathbf{X}}
 \def\bfY{\mathbf{Y}}
 \def\bfZ{\mathbf{Z}}
+\def\bfx{\mathbf{x}}
+\def\bfmu{\boldsymbol{\mu}}
+\def\bfSigma{\mathbf{\Sigma}}
 
 % bb series
 \def\bbA{\mathbb{A}}
