Updating notes in the document and adding some functions

--- a/Code/One-Shot-GP/grad_descent_gp_selection.ipynb
+++ b/Code/One-Shot-GP/grad_descent_gp_selection.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "id": "b841ece8-88a7-4066-9ab6-6f2b657ee492",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "8efb0d51-576b-425d-8ab0-58d83945425b",
    "metadata": {},
    "outputs": [],
@@ -151,31 +151,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "279b6bd9-ada5-42ea-82cf-254f3cc6d47d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_posterior_mean_and_variance(\n",
+    "    test_inputs: Float[Tensor, \"M D\"],\n",
+    "    X: Float[Tensor, \"N D\"],\n",
+    "    K_chol: Float[Tensor, \"N N\"],\n",
+    "    y: Float[Tensor, \"N\"],\n",
+    "    ls: Float[Tensor, \"1 D\"],\n",
+    "    os: Float[Tensor, \"1 1\"],\n",
+    ") -> tuple[Float[Tensor, \"M\"], Float[Tensor, \"M M\"]]:\n",
+    "    r\"\"\"\n",
+    "    Given inputs where we will evaluate the posterior, computes and returns the posterior moments\n",
+    "    - E[ f(test_inputs) | y ] = mu(test_inputs) + k(test_inputs, X) @ k(X, X)^{-1} @ (y - mu(X))\n",
+    "    - Cov[ f(test_inputs) | y ] = k(test_inputs, test_inputs) + k(test_inputs, X) @ k(X, X)^{-1} @ k(X, test_inputs)\n",
+    "\n",
+    "    test_inputs:     the matrix containing test inputs we want to evaluate f() on\n",
+    "    X:               the matrix containing training inputs (where we have observations)\n",
+    "    K_chol:          the Cholesky factor of the k(X, X) kernel matrix evaluated on training inputs\n",
+    "                     plus observational noise\n",
+    "                         i.e. K_chol @ K_chol.T = (k(X, X) + sigma^2 I)\n",
+    "    y:               is the vector of training observations\n",
+    "    ls:              is the lengthscale of the kernel\n",
+    "    os:              is the outputscale of the kernel\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # ^^^ Note:\n",
+    "    # You may be wondering why we are passing in K_chol,\n",
+    "    # rather than computing it as part of this function.\n",
+    "    # The reasoning will make sense once we start iteratively updating the posterior\n",
+    "\n",
+    "    # Compute k(X, X)^{-1} k(X, test_inputs)\n",
+    "    # We need this term for both the posterior mean and posterior variance\n",
+    "    Ktest = matern_kernel(X, test_inputs, ls, os)\n",
+    "    K_inv_Ktest = torch.cholesky_solve(Ktest, K_chol, upper=False)\n",
+    "\n",
+    "    # ***SUPER IMPORTANT:***\n",
+    "    # Note that we are using `cholesky_solve` to compute k(X, X)^{-1} k(X, test_inputs)\n",
+    "    # rather than calling k(X, X).inverse() @ Ktest\n",
+    "    # This is highly intentional\n",
+    "    # 1) Never call .inverse(); it is highly unstable. Always perform matrix solves instead.\n",
+    "    # 2) We can use the fact that k(X, X) is positive semi-definite to speed up solves.\n",
+    "    #    The way we exploit this is by first applying the Cholesky decomposition to k(X, X)\n",
+    "    #    (which exists because it is PSD) and then using it to perform a series of triangular\n",
+    "    #    solves (which are fast).\n",
+    "\n",
+    "    # Compute posterior mean\n",
+    "    posterior_mean = mu(test_inputs) + (K_inv_Ktest.mT @ (y - mu(X)).unsqueeze(-1)).squeeze(-1)\n",
+    "    # Some notes:\n",
+    "    # 1) .mT is the same as .T, but it works with batched tensors\n",
+    "    #    i.e. it transposes the last two dimensions of the tensor\n",
+    "    #    this helper is useful if we want to use batched GPs\n",
+    "    # 2) (y - mu(X)).unsqueeze(-1) turns `y - mu(X)` from a N vector into a\n",
+    "    #    N x 1 matrix so that we can then use the matmul function with it.\n",
+    "    #    ().squeeze(-1) converts the resulting matmul back into a N vector.\n",
+    "\n",
+    "    # Compute posterior covariance\n",
+    "    posterior_covar = matern_kernel(test_inputs, test_inputs, ls, os) - Ktest.mT @ K_inv_Ktest\n",
+    "\n",
+    "    # Done!\n",
+    "    return posterior_mean, posterior_covar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "id": "e1eedbbb-b367-43f3-b856-5f6d5d30a11a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_chol_newdata(\n",
-    "    K_chol: Float[Tensor, \"N N\"], X_old: Float[Tensor, \"N D\"], X_new: Float[Tensor, \"N_new D\"], \n",
-    "    ls: Float[Tensor, \"1 D\"], os: Float[Tensor, \"1 1\"]\n",
+    "    K_chol: Float[Tensor, \"N N\"],\n",
     "    X: Float[Tensor, \"N D\"],\n",
     "    X_next: Float[Tensor, \"N_next D\"],\n",
     "    ls: Float[Tensor, \"1 D\"],\n",
     "    os: Float[Tensor, \"1 1\"],\n",
     "    sigma_sq: Float[Tensor, \"\"],\n",
     "    eps: float = 1e-4,\n",
-    ") -> Float[Tensor, \"(N+N_next) (N+N_Next)\"]:\n",
+    ") -> Float[Tensor, \"(N+N_next) (N+N_next)\"]:\n",
     "    \"\"\"\n",
     "    Computes the Cholesky factor of the block matrix\n",
     "    [ k(X, X) + sigma_sq * I          k(X, X_next)                      ]\n",
     "    [ k(X_next, X)                    k(X_next, X_next)  + sigma_sq * I ]\n",
+    "    where k is the kernel covariance\n",
     "\n",
     "    This function should efficiently use prior computation.\n",
     "    Given that we already have computed K_chol @ K_chol.T = k(X, X),\n",
     "    we should be able to \"update\" that K_chol in O(N^2) time to get the\n",
     "    desired block cholesky factorization.\n",
     "\n",
+    "    K_chol: Cholesky factorization of k(X, X) + sigma_sq * I\n",
+    "    X: Prior data\n",
+    "    X_next: Newly-added data\n",
+    "    ls: Length scale of the kernel covariance\n",
+    "    os: Output scale of the kernel covariance\n",
+    "    sigma_sq: Observation noise\n",
     "    eps:      Small amount of noise to add to the diagonal for stability\n",
     "    \"\"\"\n",
     "\n",
@@ -184,8 +257,8 @@
     "    #     rather than reusing K_chol for an efficient update\n",
     "    # You should make this function more efficient.\n",
     "\n",
-    "    X_joint = torch.cat([X, X_next], dim=-2)\n",
-    "    K_joint = k(X_joint, X_joint, ls, os)\n",
+    "    X_joint = torch.cat([X, X_next], dim = -2)\n",
+    "    K_joint = matern_kernel(X_joint, X_joint, ls, os)\n",
     "\n",
     "    # Add sigma_sq * I to K_joint\n",
     "    #\n",
@@ -212,7 +285,10 @@
     "    # Concatenate sub-blocks of Cholesky decomposition matrix and return them in the form\n",
     "    # [ K_chol      0 ]\n",
     "    # [ L_21     L_22 ]\n",
-    "    return(torch.cat((torch.cat((K_chol, torch.zeros(N, N_next)), -1), torch.cat((L_21, L_22), -1)), -2))"
+    "    return torch.cat(\n",
+    "        (torch.cat((K_chol, torch.zeros(N, N_next)), dim = -1), \n",
+    "         torch.cat((L_21, L_22), dim = -1)\n",
+    "        ), dim = -2)"
    ]
   },
   {
@@ -237,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "0bfd130b-ada6-4244-86ee-29794b4e5aa6",
    "metadata": {},
    "outputs": [],
@@ -255,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "242a8796-3a1f-4828-a69c-03eb7042862d",
    "metadata": {},
    "outputs": [],
@@ -291,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 98,
    "id": "0b7014df-e9fe-446c-b2a3-894a1beecd5e",
    "metadata": {},
    "outputs": [],
@@ -299,21 +375,23 @@
     "def observe(\n",
     "    func: Callable[[Float[Tensor, \"N D\"]], Float[Tensor, \"N\"]],\n",
     "    X: Float[Tensor, \"N D\"], \n",
-    "    noise: Float = 1e-2,\n",
+    "    sigma_sq: Float = 1e-2,\n",
     ") -> Float[Tensor, \"N\"]:\n",
     "    r\"\"\"\n",
-    "    A \"wrapper\" to return func(X) + epsilon.\n",
-    "    `func` is a real-valued function on R^D which can be applied rowwise to X \n",
-    "    `noise` is the standard deviation of epsilon (iid observation noise)\n",
+    "    A \"wrapper\" to return y = func(X) + noise.\n",
+    "\n",
+    "    func: A real-valued function defined on R^D which is applied row-wise to X\n",
+    "    X: A matrix of N D-dimensional real-valued inputs to the function\n",
+    "    sigma_sq: Variance of the IID observation noise \n",
     "    \"\"\"\n",
     "    \n",
     "    true_obs = func(X)\n",
-    "    return true_obs + torch.randn_like(true_obs).mul(noise)"
+    "    return true_obs + torch.randn_like(true_obs).mul(math.sqrt(sigma_sq))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 107,
    "id": "036d9446-64ea-439e-bdfd-0db356910339",
    "metadata": {},
    "outputs": [
@@ -321,26 +399,139 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.0345, -0.2305, -0.0463, -0.0425, -0.4781, -0.0033, -0.3939, -0.5895,\n",
-      "        -0.0059])\n",
-      "tensor([-0.0345, -0.2305, -0.0464, -0.0425, -0.4781, -0.0033, -0.3939, -0.5894,\n",
-      "        -0.0059])\n"
+      "tensor([-0.0254, -1.1966, -0.4085, -0.6268, -0.5142, -0.3427, -0.0486, -0.1650,\n",
+      "        -0.0341])\n",
+      "tensor([-0.0234, -1.1962, -0.4090, -0.6254, -0.5144, -0.3443, -0.0502, -0.1674,\n",
+      "        -0.0331])\n",
+      "tensor([-0.0020, -0.0004,  0.0005, -0.0014,  0.0001,  0.0016,  0.0016,  0.0024,\n",
+      "        -0.0009])\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-3.3224])"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Ensuring the observe function works as intended\n",
-    "test_vecs = torch.rand(54).reshape((9,6))\n",
-    "print(hartmann_six(test_vecs))\n",
-    "print(observe(hartmann_six, test_vecs, noise = 1e-5)) # Outputs above plus 1e-5 noise. Should be very similar."
+    "# test_vecs = torch.rand((9, 6))\n",
+    "# true_vals = hartmann_six(test_vecs)\n",
+    "# obs_vals = observe(hartmann_six, test_vecs, sigma_sq = 1e-6) # Should be pretty similar.\n",
+    "# print(true_vals)\n",
+    "# print(obs_vals)\n",
+    "# print(true_vals - obs_vals)\n",
+    "\n",
+    "# True global optimum of the Hartmann 6D function\n",
+    "H6_argmax = torch.tensor([[0.20169, 0.150011, 0.476874, 0.275332, 0.311652, 0.6573]])\n",
+    "hartmann_six(H6_argmax)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbd6af83-f0af-4194-9c16-383e5746dc60",
+   "metadata": {},
+   "source": [
+    "## Acquisition Functions\n",
+    "\n",
+    "The primary acquisition function which we will use is the entropy-based information gain. \n",
+    "\n",
+    "The entropy of a $D$-dimensional Gaussian random variable $\\mathbf{X} \\sim \\mathcal{N}(\\boldsymbol{\\mu}, \\mathbf{\\Sigma})$ is given by $H(\\mathbf{X}) = \\frac{1}{2}\\big(\\log\\det(\\mathbf{\\Sigma}) + D\\log(2\\pi{e})\\big)$.\n",
+    "\n",
+    "Under our setup, $\\mathbf{S}_{t}^{\\top}y \\sim $\n",
+    "\n",
+    "This yields the following result: $$\\mathbf{S}_{t} = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\textrm{IG}(\\mathbf{S}_{t}^{\\top}y, \\mathbf{S}_{t}^{\\top}f(\\mathbf{X})) = \\arg\\max_{\\mathbf{S} \\in \\mathbb{R}^{n \\times t}}\\frac{1}{2}\\log\\det\\big((\\mathbf{S}_{t}^{\\top}\\mathbf{S})^{-1}\\mathbf{S}_{t}^{\\top}(\\mathbf{K} + \\sigma^{2}\\mathbf{I})\\mathbf{S}\\big)$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc899a50-b8e3-474c-bb86-9d8549035d2a",
+   "id": "aa7071d7-72c6-4e5b-8032-836cffa7102d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def normalize_cols(S: Float[Tensor, \"R C\"]) -> Float[Tensor, \"R C\"]:\n",
+    "    # Calculate L2 norms of columns of the given matrix\n",
+    "    col_norms: Float[Tensor, \"C\"] = (S.mT @ S).diag().sqrt()\n",
+    "\n",
+    "    # Error checking\n",
+    "    if 0. in col_norms:\n",
+    "        raise Exception(\"Error: One or more columns of the provided matrix has a norm of zero.\")\n",
+    "\n",
+    "    # Divide columns by the norm to ensure each column has L2 norm of 1 \n",
+    "    # normed: Float[Tensor, \"R C\"] = torch.div(S, col_norms)\n",
+    "    # normed = normed * torch.sign(normed[0, 0]) # I prefer positive numbers in the top left\n",
+    "    return torch.div(S, col_norms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9f29ef7-9b40-43ce-a05a-ce230da9621e",
+   "metadata": {},
+   "source": [
+    "## Testing Code\n",
+    "\n",
+    "Here, we actually test out the code based on the functions defined above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "abaefaf1-a123-46e1-937f-8ebc830f6844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GP hyperparameters:\n",
+    "#   - ls: kernel lengthscale\n",
+    "#   - os: kernel outputscale\n",
+    "#   - sigma_sq: observational noise\n",
+    "ls: Float[Tensor, \"1 D\"] = torch.ones((1, D), dtype=DTYPE, device=DEVICE)\n",
+    "os: Float[Tensor, \"1 1\"] = torch.tensor(1., dtype=DTYPE, device=DEVICE).view(1, 1)\n",
+    "sigma_sq: Float[Tensor, \"1 1\"] = torch.tensor(1e-2, dtype=DTYPE, device=DEVICE).view(1, 1)\n",
+    "\n",
+    "# Create (random) initial dataset D = (X_init, y_init)\n",
+    "d: Integer = 6\n",
+    "N_init: Integer = 101 \n",
+    "X_init: Float[Tensor, \"N_init d\"] = torch.rand((N_init, d))\n",
+    "y_init: Float[Tensor, \"N_init\"] = observe(hartmann_six, X_init, noise = sigma_sq)\n",
+    "\n",
+    "# Covariance matrix of initial data points (K + sigma^2 I)\n",
+    "K_init: Float[Tensor, \"N_init N_init\"] = matern_kernel(X_init, X_init, ls, os) + sigma_sq * torch.eye(N_init)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "12a1b1fe-0910-48e6-aec5-a6317ffa4509",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500, 5.0500,\n",
+       "        5.0500, 5.0500])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
